HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/OpaqueReturnMissingImplementation/Expected.uv
//! Expected diagnostic metadata for the OpaqueReturnMissingImplementation rejected-source specimen.

expectedDiagnostic("E-TYP-2511", "diag.14.OpaqueTypes")
